native/native.tests/cli-tests/testData/cli/syntaxError_psi.out
warning: the argument '-Xuse-fir-lt' is deprecated. The light tree mode is enabled by default and it will become unchangeable in 2.5+ because the flag will be removed.
testData/cli/syntaxError.kt:1:10: error: syntax error: Expecting '}'.
fun a() {
         ^
COMPILATION_ERROR
